# ML_Agents

./: README.md  pyproject.toml  run_env.bat
Assets/ML-Agents/Examples/Soccer/: run_soccer_train.bat
Assets/ML-Agents/Examples/Soccer/Scenes/: Soccer.unity  Soccer_ml.unity
Assets/ML-Agents/Examples/Soccer/Scripts/: AgentSoccer.cs  SoccerBallController.cs  SoccerEnvController.cs  SoccerSettings.cs
Assets/ML-Agents/Timers/: ML-SampleScene_timers.json  Soccer_timers.json
Assets/ML_Agents_Sample/: ML-SampleScene.unity  RollerAgent.cs  rollerball_confige.yaml  run_rollerball_train.bat
Assets/ML_Agents_Sample/results/ppo/: RollerBall.onnx  configuration.yaml
Assets/ML_Agents_Sample/results/ppo/RollerBall/: RollerBall-5001.pt  checkpoint.pt  events.out.tfevents.1774161141.Nextop-C04.85632.0
Assets/ML_Agents_Sample/results/ppo/run_logs/: timers.json  training_status.json
ProjectSettings/: ProjectSettings.asset
lib/ml-agents/mlagents.egg-info/: PKG-INFO  requires.txt
