[project]
name = "unity-ml-agent"
version = "0.1.0"
description = "Unity ML-Agents environment"
readme = "README.md"
requires-python = ">=3.10.1, <=3.10.12"
dependencies = [
    "absl-py==2.4.0",
    "annotated-doc==0.0.4",
    "anyio==4.12.1",
    "attrs==26.1.0",
    "cattrs==1.5.0",
    "certifi==2026.2.25",
    "click==8.3.1",
    "cloudpickle==3.1.2",
    "colorama==0.4.6",
    "exceptiongroup==1.3.1",
    "filelock==3.25.2",
    "fsspec==2026.2.0",
    "grpcio==1.53.2",
    "gym==0.26.2",
    "gym-notices==0.1.0",
    "h11==0.16.0",
    "h5py==3.16.0",
    "hf-xet==1.4.2",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "huggingface-hub==1.7.2",
    "idna==3.11",
    "jinja2==3.1.6",
    "markdown==3.10.2",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mpmath==1.3.0",
    "networkx==3.4.2",
    "numpy==1.23.5",
    "onnx==1.15.0",
    "packaging==26.0",
    "pettingzoo==1.15.0",
    "pillow==12.1.1",
    "protobuf==3.20.3",
    "pygments==2.19.2",
    "pypiwin32==223",
    "pywin32==311",
    "pyyaml==6.0.3",
    "rich==14.3.3",
    "setuptools==82.0.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sympy==1.14.0",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "torch==2.8.0",
    "tqdm==4.67.3",
    "typer==0.24.1",
    "typing-extensions==4.15.0",
    "werkzeug==3.1.6",
    "mlagents-envs",
    "mlagents"
]

[dependency-groups]
dev = []

[tool.uv.sources]
mlagents = { path = "./lib/ml-agents", editable = true }
mlagents-envs = { path = "./lib/ml-agents-envs", editable = true }